--- a/genetic/abstract.html
+++ b/genetic/abstract.html
@@ -89,77 +89,54 @@
 					<li>
 						<a href="#">St Petersburg <i class="fa fa-chevron-down"></i></a>
 						<ul>
-							<li><a href="#">Session Schedule</a></li>
+							<li><a href="#">The City of St Peter</a></li>
 						</ul>
 					</li>
 				</ul>
 			</div>
 		</nav>
-
-		<div class="hero">
-			<div class="container">
-				<div class="row">
-					<div class="col-5">
-						<div class="hero__logos">
-							<img class="hero__logos__logo hero__logos__logo--mg" src="img/logo-mg.png" alt="" />
-							<img class="hero__logos__logo hero__logos__logo--eswg" src="img/logo-eswg.png" alt="" />
-						</div>
-						<div class="hero__title hero__title--isfg">ISFG</div>
-						<div class="hero__title hero__title--eswg">ESWG</div>
-						<div class="hero__address">
-								SAINT PETERSBURG, RUSSIA<br />
-								12.09 - 16.09.2018<br />
-								Hotel Vedensky
-						</div>
-					</div>
-					<div class="col-7">
-						<div class="hero__descr">
-							International society for forensic genetics 
-							english speaking working group
-						</div>
-					</div>
-				</div>
-				<div class="hero__scroll">
-					<div class="hero__scroll__text">Scroll Down</div>
-					<div class="hero__scroll__icon"></div>
-				</div>
-			</div>
-		</div>
 	</header>
 
-  <section class="content">
-    <div class="container">
-      <ul>
-        <li>
-          <a href="mainpage.html">Mainpage</a>
-        </li>
-        <li>
-          <a href="about.html">The City of St Peter</a>
-        </li>
-        <li>
-          <a href="about-the-conference.html">About the conference</a>
-        </li>
-        <li>
-          <a href="abstract.html">Abstract</a>
-        </li>
-        <li>
-          <a href="organizers.html">Organizers</a>
-        </li>
-        <li>
-          <a href="posters.html">Posters</a>
-        </li>
-        <li>
-          <a href="prize.html">Prize</a>
-        </li>
-        <li>
-          <a href="venue.html">Venue</a>
-        </li>
-        <li>
-          <a href="workshops.html">Workshops</a>
-        </li>
-      </ul>
+<section class="heading heading--on-image" style="background-image: url('img/sample/abstract.jpg')">
+  <div class="container">
+    <ul class="breadcrumbs">
+      <li><a href="/">Home</a></li>
+      <li><span>Abstract</span></li>
+    </ul>
+
+    <h1 class="heading__title">
+      Abstract
+    </h1>
+  </div>
+</section>
+
+<section class="content">
+  <div class="container">
+    <div class="alert alert-info alert-lg">
+      Participants of the Meeting who would like to present oral or poster presentations should submit abstracts to the scientific committee online <b>from  April 1  to May 31, 2018.</b> Please follow the guidelines below for abstract submission
     </div>
-  </section>
+
+    <h3>Abstract submission guidelines.</h3>
+    <p>Author must register or sign up to MY PAGE  in order to submit an abstract. On submission, acknowledgement will be sent to the presenting author via e-mail. Abstracts will be reviewed by the scientific board and published in the Meeting Proceedings booklet. </p>
+
+    <p>1. The document should be submitted in MS Word format using the online submission form on <a href="#" class="text-underline"><b>MY PAGE</b></a>. Only abstracts submitted online will be accepted.</p>
+
+    <p>2. It is the responsibility for the authors to ensure the accuracy of the abstract.</p>
+
+    <p>3. The abstract should not exceed  2,500 characters including names of the authors, affiliations and references.</p>
+
+    <p>4. Use Arial font at 12 points for all text (title, body and reference).</p>
+
+    <p>5. Type the title with capital letters, bold face and cantered, followed by (O) for an oral presentation or (P) for a poster session.</p>
+
+    <p>6. Author(s) and affiliation(s) should be cantered.  The name of the main author (presenter) should be underlined. Write the name of author(s) in order of first name and last name</p>
+
+    <p>Please register in order to submit an abstract. <br />
+    If you have already registered please log in to submit an abstract</p>
+  </div>
+</section>
+
+<section class="present-text"></section>
 
 	<footer class="footer">
 		<div class="container">
@@ -170,7 +147,7 @@
 			<div class="footer__links">
 				<div>Organizing Committee: <a class="text-underline" href="mailto:andrei@medicalgenomics.ru">andrei@medicalgenomics.ru</a></div>
 				<div>General manager: <a class="text-underline" href="mailto:gm@eswg2018.org">gm@eswg2018.org</a></div>
-				<div>Registration manager: <a class="text-underline" href="mailto:m@eswg2018.org">m@eswg2018.org</a></div>
+				<div>Registration manager: <a class="text-underline" href="mailto:rm@eswg2018.org">rm@eswg2018.org</a></div>
 				<div>Visa support: <a class="text-underline" href="mailto:visa@eswg2018.org">visa@eswg2018.org</a></div>
 			</div>
 			<div class="footer__social">
