--- a/genetic/organizers.html
+++ b/genetic/organizers.html
@@ -89,77 +89,75 @@
 					<li>
 						<a href="#">St Petersburg <i class="fa fa-chevron-down"></i></a>
 						<ul>
-							<li><a href="#">Session Schedule</a></li>
+							<li><a href="#">The City of St Peter</a></li>
 						</ul>
 					</li>
 				</ul>
 			</div>
 		</nav>
-
-		<div class="hero">
-			<div class="container">
-				<div class="row">
-					<div class="col-5">
-						<div class="hero__logos">
-							<img class="hero__logos__logo hero__logos__logo--mg" src="img/logo-mg.png" alt="" />
-							<img class="hero__logos__logo hero__logos__logo--eswg" src="img/logo-eswg.png" alt="" />
-						</div>
-						<div class="hero__title hero__title--isfg">ISFG</div>
-						<div class="hero__title hero__title--eswg">ESWG</div>
-						<div class="hero__address">
-								SAINT PETERSBURG, RUSSIA<br />
-								12.09 - 16.09.2018<br />
-								Hotel Vedensky
-						</div>
-					</div>
-					<div class="col-7">
-						<div class="hero__descr">
-							International society for forensic genetics 
-							english speaking working group
-						</div>
-					</div>
-				</div>
-				<div class="hero__scroll">
-					<div class="hero__scroll__text">Scroll Down</div>
-					<div class="hero__scroll__icon"></div>
-				</div>
-			</div>
-		</div>
 	</header>
 
-  <section class="content">
-    <div class="container">
-      <ul>
-        <li>
-          <a href="mainpage.html">Mainpage</a>
-        </li>
-        <li>
-          <a href="about.html">The City of St Peter</a>
-        </li>
-        <li>
-          <a href="about-the-conference.html">About the conference</a>
-        </li>
-        <li>
-          <a href="abstract.html">Abstract</a>
-        </li>
-        <li>
-          <a href="organizers.html">Organizers</a>
-        </li>
-        <li>
-          <a href="posters.html">Posters</a>
-        </li>
-        <li>
-          <a href="prize.html">Prize</a>
-        </li>
-        <li>
-          <a href="venue.html">Venue</a>
-        </li>
-        <li>
-          <a href="workshops.html">Workshops</a>
-        </li>
-      </ul>
-    </div>
-  </section>
+<section class="heading heading--on-image" style="background-image: url('img/sample/abstract.jpg')">
+  <div class="container">
+    <ul class="breadcrumbs">
+      <li>
+        <a href="/">Home</a>
+      </li>
+      <li>
+        <span>Organizers</span>
+      </li>
+    </ul>
+
+    <h1 class="heading__title">
+      Organizers
+    </h1>
+  </div>
+</section>
+
+<section class="content">
+  <div class="container">
+    <h4>President of the Meeting</h4>
+    <ul class="list-unstyled list-unstyled--indent">
+      <li>Prof. Pavel Ivanov</li>
+      <li>Russian Forensic Expert Centre, Moscow</li>
+    </ul>
+
+    <h4>Meeting Office</h4>
+    <ul class="list-unstyled list-unstyled--indent">
+      <li>Tbc – general manager</li>
+      <li>Tbc – registration manager</li>
+    </ul>
+
+    <h4>Scientific Committee</h4>
+    <ul class="list-unstyled list-unstyled--indent">
+      <li>Dr Andreas Tilmar</li>
+      <li>Dr Bo Thisted Simonsen</li>
+      <li>Dr Denise Syndercombe-Court</li>
+      <li>Dr Andrei Semikhodskii</li>
+      <li>Dr Gunilla Holmlund</li>
+      <li>Dr Vladislav Zavarin</li>
+    </ul>
+
+    <h4>Organizing Committee</h4>
+    <ul class="list-unstyled list-unstyled--indent">
+      <li>Head of the Organizing Committee</li>
+      <li>Dr Andrei Semikhodskii</li>
+    </ul>
+
+    <h4>Members of the Organizing Committee</h4>
+    <ul class="list-unstyled list-unstyled--indent">
+      <li>Dr Andreas Tilmar</li>
+      <li>Dr Bo Thisted Simonsen</li>
+      <li>Dr Denise Syndercombe-Court</li>
+      <li>Dr Gunilla Holmlund</li>
+      <li>Dr Bo Thisted Simonsen</li>
+      <li>Dr Denise Syndercombe-Court</li>
+      <li>Dr Vladislav Zavarin</li>
+    </ul>
+  </div>
+</section>
+
+<section class="present-text"></section>
 
 	<footer class="footer">
 		<div class="container">
@@ -170,7 +168,7 @@
 			<div class="footer__links">
 				<div>Organizing Committee: <a class="text-underline" href="mailto:andrei@medicalgenomics.ru">andrei@medicalgenomics.ru</a></div>
 				<div>General manager: <a class="text-underline" href="mailto:gm@eswg2018.org">gm@eswg2018.org</a></div>
-				<div>Registration manager: <a class="text-underline" href="mailto:m@eswg2018.org">m@eswg2018.org</a></div>
+				<div>Registration manager: <a class="text-underline" href="mailto:rm@eswg2018.org">rm@eswg2018.org</a></div>
 				<div>Visa support: <a class="text-underline" href="mailto:visa@eswg2018.org">visa@eswg2018.org</a></div>
 			</div>
 			<div class="footer__social">
