--- a/genetic/venue.html
+++ b/genetic/venue.html
@@ -89,77 +89,77 @@
 					<li>
 						<a href="#">St Petersburg <i class="fa fa-chevron-down"></i></a>
 						<ul>
-							<li><a href="#">Session Schedule</a></li>
+							<li><a href="#">The City of St Peter</a></li>
 						</ul>
 					</li>
 				</ul>
 			</div>
 		</nav>
-
-		<div class="hero">
-			<div class="container">
-				<div class="row">
-					<div class="col-5">
-						<div class="hero__logos">
-							<img class="hero__logos__logo hero__logos__logo--mg" src="img/logo-mg.png" alt="" />
-							<img class="hero__logos__logo hero__logos__logo--eswg" src="img/logo-eswg.png" alt="" />
-						</div>
-						<div class="hero__title hero__title--isfg">ISFG</div>
-						<div class="hero__title hero__title--eswg">ESWG</div>
-						<div class="hero__address">
-								SAINT PETERSBURG, RUSSIA<br />
-								12.09 - 16.09.2018<br />
-								Hotel Vedensky
-						</div>
-					</div>
-					<div class="col-7">
-						<div class="hero__descr">
-							International society for forensic genetics 
-							english speaking working group
-						</div>
-					</div>
-				</div>
-				<div class="hero__scroll">
-					<div class="hero__scroll__text">Scroll Down</div>
-					<div class="hero__scroll__icon"></div>
-				</div>
-			</div>
-		</div>
 	</header>
 
-  <section class="content">
-    <div class="container">
-      <ul>
-        <li>
-          <a href="mainpage.html">Mainpage</a>
-        </li>
-        <li>
-          <a href="about.html">The City of St Peter</a>
-        </li>
-        <li>
-          <a href="about-the-conference.html">About the conference</a>
-        </li>
-        <li>
-          <a href="abstract.html">Abstract</a>
-        </li>
-        <li>
-          <a href="organizers.html">Organizers</a>
-        </li>
-        <li>
-          <a href="posters.html">Posters</a>
-        </li>
-        <li>
-          <a href="prize.html">Prize</a>
-        </li>
-        <li>
-          <a href="venue.html">Venue</a>
-        </li>
-        <li>
-          <a href="workshops.html">Workshops</a>
-        </li>
-      </ul>
+<section class="heading heading--on-image" style="background-image: url('img/sample/abstract.jpg')">
+  <div class="container">
+    <ul class="breadcrumbs">
+      <li>
+        <a href="/">Home</a>
+      </li>
+      <li>
+        <span>Venue</span>
+      </li>
+    </ul>
+
+    <h1 class="heading__title">
+      Venue
+    </h1>
+  </div>
+</section>
+
+<section class="content">
+  <div class="container">
+    <div class="row mb-x3">
+      <div class="col-7">
+        <h3>Vedensky Hotel</h3>
+        <p><b class="text-secondary"><i class="fa fa-map-signs"></i> Address:</b> 37, Bolshoy prospekt Petrogradskaya storona, St Petersburg, 197198, Russia</p>
+
+        <p><b class="text-secondary"><i class="fa fa-phone"></i> Telephone:</b> <a href="tel:+78123324222">+7 (812) 332-42-22</a></p>
+
+        <p><b class="text-secondary"><i class="fa fa-envelope"></i> Email:</b> <a href="mailto:info@vedenskyhotel.ru">info@vedenskyhotel.ru</a> </p>
+
+        <p><b class="text-secondary"><i class="fa fa-globe"></i> Web:</b> <a href="//vedenskyhotel.com" target="_blank">vedenskyhotel.com</a></p>
+      </div>
+      <div class="col-5">
+        <img src="img/sample/about-12.jpg" alt="">
+      </div>
     </div>
-  </section>
+
+    <div class="mb-x3">
+      <img src="img/sample/contact-map.jpg" alt="">
+    </div>
+    <p>The Vedensky Hotel was opened in October 2011.The Hotel is located in a unique historic building in the centre of St. Petersburg on the busy Bolshoy Prospect of the Petrograd Side. From the days of Catherine the Great to the Bolshevik Revolution the building housed the Vedensky Grammar School. The famous Russian poet Alexander Block studied there. The original building, founded in 1781, was a two story building which was rebuilt several time during its long history. The last reconstruction, from 2007 to 2011 completely renovated the building and turned it into a modern 4* Vedensky Hotel. The State Hermitage, the Kuntskamera, the Saint Peter-and-Paul Fortress and many other sightseeing attractions  are located within a walking distance from the Hotel. </p>
+
+    <p>The Hotel has more than 160 rooms, restaurants and bars, gym, sauna and beauty salons.</p>
+
+    <div class="row">
+      <div class="col-4">
+        <a href="img/sample/vedensky-hotel-1.jpg" data-fancybox="vedensky">
+          <img src="img/sample/vedensky-hotel-1.jpg" alt="">
+        </a>
+      </div>
+      <div class="col-4">
+        <a href="img/sample/vedensky-hotel-2.jpg" data-fancybox="vedensky">
+          <img src="img/sample/vedensky-hotel-2.jpg" alt="">
+        </a>
+      </div>
+      <div class="col-4">
+        <a href="img/sample/vedensky-hotel-3.jpg" data-fancybox="vedensky">
+          <img src="img/sample/vedensky-hotel-3.jpg" alt="">
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="present-text"></section>
 
 	<footer class="footer">
 		<div class="container">
@@ -170,7 +170,7 @@
 			<div class="footer__links">
 				<div>Organizing Committee: <a class="text-underline" href="mailto:andrei@medicalgenomics.ru">andrei@medicalgenomics.ru</a></div>
 				<div>General manager: <a class="text-underline" href="mailto:gm@eswg2018.org">gm@eswg2018.org</a></div>
-				<div>Registration manager: <a class="text-underline" href="mailto:m@eswg2018.org">m@eswg2018.org</a></div>
+				<div>Registration manager: <a class="text-underline" href="mailto:rm@eswg2018.org">rm@eswg2018.org</a></div>
 				<div>Visa support: <a class="text-underline" href="mailto:visa@eswg2018.org">visa@eswg2018.org</a></div>
 			</div>
 			<div class="footer__social">
