--- a/genetic/prize.html
+++ b/genetic/prize.html
@@ -89,77 +89,38 @@
 					<li>
 						<a href="#">St Petersburg <i class="fa fa-chevron-down"></i></a>
 						<ul>
-							<li><a href="#">Session Schedule</a></li>
+							<li><a href="#">The City of St Peter</a></li>
 						</ul>
 					</li>
 				</ul>
 			</div>
 		</nav>
-
-		<div class="hero">
-			<div class="container">
-				<div class="row">
-					<div class="col-5">
-						<div class="hero__logos">
-							<img class="hero__logos__logo hero__logos__logo--mg" src="img/logo-mg.png" alt="" />
-							<img class="hero__logos__logo hero__logos__logo--eswg" src="img/logo-eswg.png" alt="" />
-						</div>
-						<div class="hero__title hero__title--isfg">ISFG</div>
-						<div class="hero__title hero__title--eswg">ESWG</div>
-						<div class="hero__address">
-								SAINT PETERSBURG, RUSSIA<br />
-								12.09 - 16.09.2018<br />
-								Hotel Vedensky
-						</div>
-					</div>
-					<div class="col-7">
-						<div class="hero__descr">
-							International society for forensic genetics 
-							english speaking working group
-						</div>
-					</div>
-				</div>
-				<div class="hero__scroll">
-					<div class="hero__scroll__text">Scroll Down</div>
-					<div class="hero__scroll__icon"></div>
-				</div>
-			</div>
-		</div>
 	</header>
 
-  <section class="content">
-    <div class="container">
-      <ul>
-        <li>
-          <a href="mainpage.html">Mainpage</a>
-        </li>
-        <li>
-          <a href="about.html">The City of St Peter</a>
-        </li>
-        <li>
-          <a href="about-the-conference.html">About the conference</a>
-        </li>
-        <li>
-          <a href="abstract.html">Abstract</a>
-        </li>
-        <li>
-          <a href="organizers.html">Organizers</a>
-        </li>
-        <li>
-          <a href="posters.html">Posters</a>
-        </li>
-        <li>
-          <a href="prize.html">Prize</a>
-        </li>
-        <li>
-          <a href="venue.html">Venue</a>
-        </li>
-        <li>
-          <a href="workshops.html">Workshops</a>
-        </li>
-      </ul>
-    </div>
-  </section>
+<section class="heading heading--on-image" style="background-image: url('img/sample/abstract.jpg')">
+  <div class="container">
+    <ul class="breadcrumbs">
+      <li>
+        <a href="/">Home</a>
+      </li>
+      <li>
+        <span>Prize</span>
+      </li>
+    </ul>
+
+    <h1 class="heading__title">
+      Prize
+    </h1>
+  </div>
+</section>
+
+<section class="content">
+  <div class="container">
+    <p>The 2018 ESWG meeting will inaugurate  a  Special Prize for the best oral presentation. The decision as to whom the Prize will be awarded will be made at the end of the meeting, by the board of the ESWG and the Scientific Committee of the Meeting. Together with the Prize the amount is €200 is to be granted the recipient. </p>
+  </div>
+</section>
+
+<section class="present-text"></section>
 
 	<footer class="footer">
 		<div class="container">
@@ -170,7 +131,7 @@
 			<div class="footer__links">
 				<div>Organizing Committee: <a class="text-underline" href="mailto:andrei@medicalgenomics.ru">andrei@medicalgenomics.ru</a></div>
 				<div>General manager: <a class="text-underline" href="mailto:gm@eswg2018.org">gm@eswg2018.org</a></div>
-				<div>Registration manager: <a class="text-underline" href="mailto:m@eswg2018.org">m@eswg2018.org</a></div>
+				<div>Registration manager: <a class="text-underline" href="mailto:rm@eswg2018.org">rm@eswg2018.org</a></div>
 				<div>Visa support: <a class="text-underline" href="mailto:visa@eswg2018.org">visa@eswg2018.org</a></div>
 			</div>
 			<div class="footer__social">
