--- a/genetic/organizers.html
+++ b/genetic/organizers.html
@@ -38,6 +38,17 @@
 
 		<nav class="header__nav" data-sticky>
 			<div class="container">
+				<div class="header__nav__buter">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+				<div class="header__nav__home">
+					<a href="/"><i class="fa fa-home"></i> Home</a>
+				</div>
+				<div class="header__nav__auth">
+					<a href="#"><i class="fa fa-user-o"></i></a>
+				</div>
 				<ul class="nav nav-header">
 					<li>
 						<a href="#">Conference <i class="fa fa-chevron-down"></i></a>
@@ -159,40 +170,62 @@
 
 <section class="present-text"></section>
 
-	<footer class="footer">
+<footer class="footer">
+	<div class="container">
+		<h2 class="section-title">Contact us</h2>
+		<div class="footer__title">
+			ESWG 2018 Meeting in
+			<nobr>St Petersburg</nobr>
+		</div>
+		<div class="footer__links">
+			<div class="footer__link">
+				<span class="footer__link__title">Organizing Committee:</span>
+				<span class="footer__link__value">
+					<a class="text-underline" href="mailto:andrei@medicalgenomics.ru">andrei@medicalgenomics.ru</a>
+				</span>
+			</div>
+			<div class="footer__link">
+				<span class="footer__link__title">General manager:</span>
+				<span class="footer__link__value">
+					<a class="text-underline" href="mailto:gm@eswg2018.org">gm@eswg2018.org</a>
+				</span>
+			</div>
+			<div class="footer__link">
+				<span class="footer__link__title">Registration manager:</span>
+				<span class="footer__link__value">
+					<a class="text-underline" href="mailto:rm@eswg2018.org">rm@eswg2018.org</a>
+				</span>
+			</div>
+			<div class="footer__link">
+				<span class="footer__link__title">Visa support:</span>
+				<span class="footer__link__value">
+					<a class="text-underline" href="mailto:visa@eswg2018.org">visa@eswg2018.org</a>
+				</span>
+			</div>
+		</div>
+		<div class="footer__social">
+			<a href="#">
+				<i class="fa fa-facebook"></i>
+			</a>
+			<a href="#">
+				<i class="fa fa-linkedin"></i>
+			</a>
+			<a href="#">
+				<i class="fa fa-twitter"></i>
+			</a>
+		</div>
+	</div>
+
+	<div class="footer__line">
 		<div class="container">
-			<h2 class="section-title">Contact us</h2>
-			<div class="footer__title">
-				ESWG 2018 Meeting in St Petersburg
-			</div>
-			<div class="footer__links">
-				<div>Organizing Committee: <a class="text-underline" href="mailto:andrei@medicalgenomics.ru">andrei@medicalgenomics.ru</a></div>
-				<div>General manager: <a class="text-underline" href="mailto:gm@eswg2018.org">gm@eswg2018.org</a></div>
-				<div>Registration manager: <a class="text-underline" href="mailto:rm@eswg2018.org">rm@eswg2018.org</a></div>
-				<div>Visa support: <a class="text-underline" href="mailto:visa@eswg2018.org">visa@eswg2018.org</a></div>
-			</div>
-			<div class="footer__social">
-				<a href="#">
-					<i class="fa fa-facebook"></i>
-				</a>
-				<a href="#">
-					<i class="fa fa-linkedin"></i>
-				</a>
-				<a href="#">
-					<i class="fa fa-twitter"></i>
-				</a>
-			</div>
+			© Medical Genomics Ltd 2018. <nobr>All rights reserved</nobr>
 		</div>
+	</div>
+</footer>
 
-		<div class="footer__line">
-			<div class="container">
-					© Medical Genomics Ltd  2018. All rights reserved
-			</div>
-		</div>
-	</footer>
+<div class="to-top"></div>
 
-	<div class="to-top"></div>
-
-	<script src="js/main.js"></script>
+<script src="js/main.js"></script>
 </body>
+
 </html>
