--- a/genetic/index.html
+++ b/genetic/index.html
@@ -38,6 +38,17 @@
 
 		<nav class="header__nav" data-sticky>
 			<div class="container">
+				<div class="header__nav__buter">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+				<div class="header__nav__home">
+					<a href="/"><i class="fa fa-home"></i> Home</a>
+				</div>
+				<div class="header__nav__auth">
+					<a href="#"><i class="fa fa-user-o"></i></a>
+				</div>
 				<ul class="nav nav-header">
 					<li>
 						<a href="#">Conference <i class="fa fa-chevron-down"></i></a>
@@ -89,112 +100,106 @@
 					<li>
 						<a href="#">St Petersburg <i class="fa fa-chevron-down"></i></a>
 						<ul>
-							<li><a href="#">Session Schedule</a></li>
+							<li><a href="#">The City of St Peter</a></li>
 						</ul>
 					</li>
 				</ul>
 			</div>
 		</nav>
-
-		<div class="hero">
-			<div class="container">
-				<div class="row">
-					<div class="col-5">
-						<div class="hero__logos">
-							<img class="hero__logos__logo hero__logos__logo--mg" src="img/logo-mg.png" alt="" />
-							<img class="hero__logos__logo hero__logos__logo--eswg" src="img/logo-eswg.png" alt="" />
-						</div>
-						<div class="hero__title hero__title--isfg">ISFG</div>
-						<div class="hero__title hero__title--eswg">ESWG</div>
-						<div class="hero__address">
-								SAINT PETERSBURG, RUSSIA<br />
-								12.09 - 16.09.2018<br />
-								Hotel Vedensky
-						</div>
-					</div>
-					<div class="col-7">
-						<div class="hero__descr">
-							International society for forensic genetics 
-							english speaking working group
-						</div>
-					</div>
-				</div>
-				<div class="hero__scroll">
-					<div class="hero__scroll__text">Scroll Down</div>
-					<div class="hero__scroll__icon"></div>
-				</div>
-			</div>
-		</div>
 	</header>
 
-  <section class="content">
-    <div class="container">
-      <ul>
-        <li>
-          <a href="mainpage.html">Mainpage</a>
-        </li>
-        <li>
-          <a href="about.html">The City of St Peter</a>
-        </li>
-        <li>
-          <a href="about-the-conference.html">About the conference</a>
-        </li>
-        <li>
-          <a href="abstract.html">Abstract</a>
-        </li>
-        <li>
-          <a href="organizers.html">Organizers</a>
-        </li>
-        <li>
-          <a href="posters.html">Posters</a>
-        </li>
-        <li>
-          <a href="prize.html">Prize</a>
-        </li>
-        <li>
-          <a href="venue.html">Venue</a>
-        </li>
-        <li>
-          <a href="workshops.html">Workshops</a>
-        </li>
-      </ul>
-    </div>
-  </section>
+<section class="content">
+  <div class="container">
+    <ul>
+      <li>
+        <a href="mainpage.html">Mainpage</a>
+      </li>
+      <li>
+        <a href="about.html">The City of St Peter</a>
+      </li>
+      <li>
+        <a href="about-the-conference.html">About the conference</a>
+      </li>
+      <li>
+        <a href="abstract.html">Abstract</a>
+      </li>
+      <li>
+        <a href="organizers.html">Organizers</a>
+      </li>
+      <li>
+        <a href="posters.html">Posters</a>
+      </li>
+      <li>
+        <a href="prize.html">Prize</a>
+      </li>
+      <li>
+        <a href="venue.html">Venue</a>
+      </li>
+      <li>
+        <a href="workshops.html">Workshops</a>
+      </li>
+    </ul>
+  </div>
+</section>
 
-	<footer class="footer">
+<section class="present-text"></section>
+
+<footer class="footer">
+	<div class="container">
+		<h2 class="section-title">Contact us</h2>
+		<div class="footer__title">
+			ESWG 2018 Meeting in
+			<nobr>St Petersburg</nobr>
+		</div>
+		<div class="footer__links">
+			<div class="footer__link">
+				<span class="footer__link__title">Organizing Committee:</span>
+				<span class="footer__link__value">
+					<a class="text-underline" href="mailto:andrei@medicalgenomics.ru">andrei@medicalgenomics.ru</a>
+				</span>
+			</div>
+			<div class="footer__link">
+				<span class="footer__link__title">General manager:</span>
+				<span class="footer__link__value">
+					<a class="text-underline" href="mailto:gm@eswg2018.org">gm@eswg2018.org</a>
+				</span>
+			</div>
+			<div class="footer__link">
+				<span class="footer__link__title">Registration manager:</span>
+				<span class="footer__link__value">
+					<a class="text-underline" href="mailto:rm@eswg2018.org">rm@eswg2018.org</a>
+				</span>
+			</div>
+			<div class="footer__link">
+				<span class="footer__link__title">Visa support:</span>
+				<span class="footer__link__value">
+					<a class="text-underline" href="mailto:visa@eswg2018.org">visa@eswg2018.org</a>
+				</span>
+			</div>
+		</div>
+		<div class="footer__social">
+			<a href="#">
+				<i class="fa fa-facebook"></i>
+			</a>
+			<a href="#">
+				<i class="fa fa-linkedin"></i>
+			</a>
+			<a href="#">
+				<i class="fa fa-twitter"></i>
+			</a>
+		</div>
+	</div>
+
+	<div class="footer__line">
 		<div class="container">
-			<h2 class="section-title">Contact us</h2>
-			<div class="footer__title">
-				ESWG 2018 Meeting in St Petersburg
-			</div>
-			<div class="footer__links">
-				<div>Organizing Committee: <a class="text-underline" href="mailto:andrei@medicalgenomics.ru">andrei@medicalgenomics.ru</a></div>
-				<div>General manager: <a class="text-underline" href="mailto:gm@eswg2018.org">gm@eswg2018.org</a></div>
-				<div>Registration manager: <a class="text-underline" href="mailto:m@eswg2018.org">m@eswg2018.org</a></div>
-				<div>Visa support: <a class="text-underline" href="mailto:visa@eswg2018.org">visa@eswg2018.org</a></div>
-			</div>
-			<div class="footer__social">
-				<a href="#">
-					<i class="fa fa-facebook"></i>
-				</a>
-				<a href="#">
-					<i class="fa fa-linkedin"></i>
-				</a>
-				<a href="#">
-					<i class="fa fa-twitter"></i>
-				</a>
-			</div>
+			© Medical Genomics Ltd 2018. <nobr>All rights reserved</nobr>
 		</div>
+	</div>
+</footer>
 
-		<div class="footer__line">
-			<div class="container">
-					© Medical Genomics Ltd  2018. All rights reserved
-			</div>
-		</div>
-	</footer>
+<div class="to-top"></div>
 
-	<div class="to-top"></div>
-
-	<script src="js/main.js"></script>
+<script src="js/main.js"></script>
 </body>
+
 </html>
