--- a/genetic/venue.html
+++ b/genetic/venue.html
@@ -38,6 +38,17 @@
 
 		<nav class="header__nav" data-sticky>
 			<div class="container">
+				<div class="header__nav__buter">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+				<div class="header__nav__home">
+					<a href="/"><i class="fa fa-home"></i> Home</a>
+				</div>
+				<div class="header__nav__auth">
+					<a href="#"><i class="fa fa-user-o"></i></a>
+				</div>
 				<ul class="nav nav-header">
 					<li>
 						<a href="#">Conference <i class="fa fa-chevron-down"></i></a>
@@ -117,17 +128,31 @@
 <section class="content">
   <div class="container">
     <div class="row mb-x3">
-      <div class="col-7">
+      <div class="col-12 col-md-7">
         <h3>Vedensky Hotel</h3>
-        <p><b class="text-secondary"><i class="fa fa-map-signs"></i> Address:</b> 37, Bolshoy prospekt Petrogradskaya storona, St Petersburg, 197198, Russia</p>
+        <p>
+          <b class="text-secondary">
+            <i class="fa fa-map-signs"></i> Address:</b> 37, Bolshoy prospekt Petrogradskaya storona, St Petersburg, 197198, Russia</p>
 
-        <p><b class="text-secondary"><i class="fa fa-phone"></i> Telephone:</b> <a href="tel:+78123324222">+7 (812) 332-42-22</a></p>
+        <p>
+          <b class="text-secondary">
+            <i class="fa fa-phone"></i> Telephone:</b>
+          <a href="tel:+78123324222">+7 (812) 332-42-22</a>
+        </p>
 
-        <p><b class="text-secondary"><i class="fa fa-envelope"></i> Email:</b> <a href="mailto:info@vedenskyhotel.ru">info@vedenskyhotel.ru</a> </p>
+        <p>
+          <b class="text-secondary">
+            <i class="fa fa-envelope"></i> Email:</b>
+          <a href="mailto:info@vedenskyhotel.ru">info@vedenskyhotel.ru</a>
+        </p>
 
-        <p><b class="text-secondary"><i class="fa fa-globe"></i> Web:</b> <a href="//vedenskyhotel.com" target="_blank">vedenskyhotel.com</a></p>
+        <p>
+          <b class="text-secondary">
+            <i class="fa fa-globe"></i> Web:</b>
+          <a href="//vedenskyhotel.com" target="_blank">vedenskyhotel.com</a>
+        </p>
       </div>
-      <div class="col-5">
+      <div class="col-12 col-md-5">
         <img src="img/sample/about-12.jpg" alt="">
       </div>
     </div>
@@ -135,25 +160,37 @@
     <div class="mb-x3">
       <img src="img/sample/contact-map.jpg" alt="">
     </div>
-    <p>The Vedensky Hotel was opened in October 2011.The Hotel is located in a unique historic building in the centre of St. Petersburg on the busy Bolshoy Prospect of the Petrograd Side. From the days of Catherine the Great to the Bolshevik Revolution the building housed the Vedensky Grammar School. The famous Russian poet Alexander Block studied there. The original building, founded in 1781, was a two story building which was rebuilt several time during its long history. The last reconstruction, from 2007 to 2011 completely renovated the building and turned it into a modern 4* Vedensky Hotel. The State Hermitage, the Kuntskamera, the Saint Peter-and-Paul Fortress and many other sightseeing attractions  are located within a walking distance from the Hotel. </p>
+    <p>The Vedensky Hotel was opened in October 2011.The Hotel is located in a unique historic building in the centre of St.
+      Petersburg on the busy Bolshoy Prospect of the Petrograd Side. From the days of Catherine the Great to the Bolshevik
+      Revolution the building housed the Vedensky Grammar School. The famous Russian poet Alexander Block studied there.
+      The original building, founded in 1781, was a two story building which was rebuilt several time during its long history.
+      The last reconstruction, from 2007 to 2011 completely renovated the building and turned it into a modern 4* Vedensky
+      Hotel. The State Hermitage, the Kuntskamera, the Saint Peter-and-Paul Fortress and many other sightseeing attractions
+      are located within a walking distance from the Hotel. </p>
 
     <p>The Hotel has more than 160 rooms, restaurants and bars, gym, sauna and beauty salons.</p>
 
     <div class="row">
-      <div class="col-4">
-        <a href="img/sample/vedensky-hotel-1.jpg" data-fancybox="vedensky">
-          <img src="img/sample/vedensky-hotel-1.jpg" alt="">
-        </a>
+      <div class="col-12 col-md-4">
+        <p>
+          <a href="img/sample/vedensky-hotel-1.jpg" data-fancybox="vedensky">
+            <img src="img/sample/vedensky-hotel-1.jpg" alt="">
+          </a>
+        </p>
       </div>
-      <div class="col-4">
-        <a href="img/sample/vedensky-hotel-2.jpg" data-fancybox="vedensky">
-          <img src="img/sample/vedensky-hotel-2.jpg" alt="">
-        </a>
+      <div class="col-12 col-md-4">
+        <p>
+          <a href="img/sample/vedensky-hotel-2.jpg" data-fancybox="vedensky">
+            <img src="img/sample/vedensky-hotel-2.jpg" alt="">
+          </a>
+        </p>
       </div>
-      <div class="col-4">
-        <a href="img/sample/vedensky-hotel-3.jpg" data-fancybox="vedensky">
-          <img src="img/sample/vedensky-hotel-3.jpg" alt="">
-        </a>
+      <div class="col-12 col-md-4">
+        <p>
+          <a href="img/sample/vedensky-hotel-3.jpg" data-fancybox="vedensky">
+            <img src="img/sample/vedensky-hotel-3.jpg" alt="">
+          </a>
+        </p>
       </div>
     </div>
   </div>
@@ -161,40 +198,62 @@
 
 <section class="present-text"></section>
 
-	<footer class="footer">
+<footer class="footer">
+	<div class="container">
+		<h2 class="section-title">Contact us</h2>
+		<div class="footer__title">
+			ESWG 2018 Meeting in
+			<nobr>St Petersburg</nobr>
+		</div>
+		<div class="footer__links">
+			<div class="footer__link">
+				<span class="footer__link__title">Organizing Committee:</span>
+				<span class="footer__link__value">
+					<a class="text-underline" href="mailto:andrei@medicalgenomics.ru">andrei@medicalgenomics.ru</a>
+				</span>
+			</div>
+			<div class="footer__link">
+				<span class="footer__link__title">General manager:</span>
+				<span class="footer__link__value">
+					<a class="text-underline" href="mailto:gm@eswg2018.org">gm@eswg2018.org</a>
+				</span>
+			</div>
+			<div class="footer__link">
+				<span class="footer__link__title">Registration manager:</span>
+				<span class="footer__link__value">
+					<a class="text-underline" href="mailto:rm@eswg2018.org">rm@eswg2018.org</a>
+				</span>
+			</div>
+			<div class="footer__link">
+				<span class="footer__link__title">Visa support:</span>
+				<span class="footer__link__value">
+					<a class="text-underline" href="mailto:visa@eswg2018.org">visa@eswg2018.org</a>
+				</span>
+			</div>
+		</div>
+		<div class="footer__social">
+			<a href="#">
+				<i class="fa fa-facebook"></i>
+			</a>
+			<a href="#">
+				<i class="fa fa-linkedin"></i>
+			</a>
+			<a href="#">
+				<i class="fa fa-twitter"></i>
+			</a>
+		</div>
+	</div>
+
+	<div class="footer__line">
 		<div class="container">
-			<h2 class="section-title">Contact us</h2>
-			<div class="footer__title">
-				ESWG 2018 Meeting in St Petersburg
-			</div>
-			<div class="footer__links">
-				<div>Organizing Committee: <a class="text-underline" href="mailto:andrei@medicalgenomics.ru">andrei@medicalgenomics.ru</a></div>
-				<div>General manager: <a class="text-underline" href="mailto:gm@eswg2018.org">gm@eswg2018.org</a></div>
-				<div>Registration manager: <a class="text-underline" href="mailto:rm@eswg2018.org">rm@eswg2018.org</a></div>
-				<div>Visa support: <a class="text-underline" href="mailto:visa@eswg2018.org">visa@eswg2018.org</a></div>
-			</div>
-			<div class="footer__social">
-				<a href="#">
-					<i class="fa fa-facebook"></i>
-				</a>
-				<a href="#">
-					<i class="fa fa-linkedin"></i>
-				</a>
-				<a href="#">
-					<i class="fa fa-twitter"></i>
-				</a>
-			</div>
+			© Medical Genomics Ltd 2018. <nobr>All rights reserved</nobr>
 		</div>
+	</div>
+</footer>
 
-		<div class="footer__line">
-			<div class="container">
-					© Medical Genomics Ltd  2018. All rights reserved
-			</div>
-		</div>
-	</footer>
+<div class="to-top"></div>
 
-	<div class="to-top"></div>
-
-	<script src="js/main.js"></script>
+<script src="js/main.js"></script>
 </body>
+
 </html>
