--- a/seb/mainpage.html
+++ b/seb/mainpage.html
@@ -12,14 +12,64 @@
 </head>
 <body>
 
-<div class="container">
-  <ul>
-    <li><a href="mainpage.html">Mainpage</a></li>
-    <li><a href="services-2.html">Inform Services</a></li>
-    <li><a href="cases.html">Cases</a></li>
-    <li><a href="services.html">Services</a></li>
-  </ul>
-</div>
+<header class="header">
+	<div class="container">
+		<nav class="row align-items-center">
+			<div class="col-12 col-md-4 col-lg-3 d-flex align-items-center justify-content-between">
+				<a href="/" class=" header__logo">
+					<img src="img/logo.png" alt="">
+				</a>
+				<div class="header__buter">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
+			</div>
+			<div class="col-12 col-md-8 col-lg-9">
+				<ul class="header__nav nav nav-header">
+					<li class="active"><a href="#">Главная</a></li>
+					<li><a href="#">Услуги</a></li>
+					<li><a href="#">Кейсы</a></li>
+					<li><a href="#">О компании</a></li>
+					<li><a href="#">СМИ о нас</a></li>
+					<li><a href="#">8 (812) 454-44-30</a></li>
+				</ul>
+			</div>
+		</nav>
+	</div>
+
+	<section class="hero">
+		<div class="container">
+			<div class="row">
+				<div class="col-12 col-md-7 col-lg-6">
+					<div class="hero__content">
+						<h2 class="hero__content__title">Ваш бизнес в безопасности<br> с СЭБ</h2>
+
+						<p>Страна в Северо-Восточной Африке и на Ближнем Востоке. О ее богатой истории, насчитывающей более пяти тысяч лет, напоминают археологические памятники в плодородной долине реки Нил.</p>
+
+						<p><span class="big">Александр Сэбович,</span><br>
+						Генеральный директор ООО &laquo;Служба Экономической Безопасности&raquo;</p>
+						
+						<div class="hero__content__action">
+							<a class="btn btn-warning btn-lg" href="#">Выберите услугу</a>
+						</div>
+
+						<p>
+							<a href="#" class="d-flex align-items-center color-white">
+								<img src="img/icon-shield.png" alt="">
+								<span class="big">&nbsp;&nbsp; Гарантия безопасности ваших данных</span> 
+							</a>
+						</p>
+					</div>
+				</div>
+				<div class="col-12 col-md-5 col-lg-6">
+					<img class="hero__content__img" src="img/alexandr-sabovich.png" alt="Александр Сэбович">
+				</div>
+			</div>
+		</div>
+	</section>
+</header>
+
 
 	
 	<footer class="footer">
